--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: maaitplot
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Plot the MAAIT data variables
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Zebin Wang
+Maintainer: Zebin Wang <zwang196@jhu.edu>
+Description: Plotting selected variables for the Mouse Allergen and Asthma Intervention Trial (MAAIT) data.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
